fix horizontal scroll with overflow-x: hidden

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   text-decoration: none;
   list-style: none;
+  overflow-x: hidden;
   /* font-family: "DM Serif Display", Georgia, "Times New Roman", Times, serif; */
   /* font-family: "Lato", sans-serif; */
 }
